Remove batch
