# app-server/src/classes/request.js
@@ -47,14 +47,11 @@ module.exports = class Request {
         isPreview: data.params.isPreview || false
       },
       filters: data.filters || device.settings.filters.default,
-      pipeline: data.pipeline || device.settings.pipeline.default,
-      batch: data.batch || device.settings.batchMode.default,
-      index: data.index || 1
+      pipeline: data.pipeline || device.settings.pipeline.default
     });
 
     assertContains(device.settings['filters'].options, this.filters, 'Invalid filters');
     assertContains(device.settings['pipeline'].options, this.pipeline, 'Invalid pipeline');
-    assertContains(device.settings['batchMode'].options, this.batch, 'Invalid batchMode');
 
     if ('-t' in features) {
       this.params.top = constrainWithFeature(data.params.top || features['-t'].limits[0], features['-t']);
