# app-server/src/constants.js
@@ -1,8 +1,3 @@
 module.exports = {
-  BATCH_NONE: 'none',
-  BATCH_MANUAL: 'manual',
-  BATCH_AUTO: 'auto',
-  BATCH_COLLATE_STANDARD: 'auto-collate-standard',
-  BATCH_COLLATE_REVERSE: 'auto-collate-reverse',
   TEMP_FILESTEM: '~tmp-scan'
 };
